--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -1,8 +1,19 @@
 <h1>Qué es E3E</h1>
 
 <p class="about">
-  E3E es una iniciativa del Instituto Eduardo Torroja de Ciencias de la Construcción en coordianción con XXXXX que pretende ayudar a la reducción de emisiones de gas de efecto invernadero a través de la rehabilitación energética de los edificios. Para ello, mediante una encuesta y las facturas energéticas, esta web detecta las actuaciones de rehabilitación con mayor impacto sobre su vivienda. Después de introducir los datos sobre su vivienda y sobre su consumo el sistema la compara con los datos de la base de datos y es capaz de situar su vivienda dentro del gasto nacional.
-  Así mismo el sistema le indica que subvenciones pueden serle concedidas y a que organismo dirigirse.
+  E3E es una iniciativa que pretende obtener datos reales sobre el consumo energético de viviendas de España y los hábitos de consumo de sus habitantes.<br/>
+  Mediante una sencilla encuesta E3E proporciona a los usuarios información sobre el consumo energético de una vivienda y la compara con el consumo de las viviendas del mismo tipo y localidad.<br/>
+  E3E es un proyecto de investigación para comparar el consumo de su vivienda con otras similares.<br/>
+  Conocer el consumo de una vivienda ayuda a controlarlo y por tanto a la reducción de las emisiones de CO2.<br/>
+  Conocer el consumo de una vivienda en comparación con las demás ayuda al usuario a saber cómo es su vivienda y si es conveniente su rehabilitación.<br/>
+  E3E contribuye a fijar las escalas para la calificación y certificación energética de edificios existentes.
+</p>
+<br/>
+<h2>Cómo colaborar</h2>
+<p class="about">
+  Simplemente rellenando la encuesta que consta de XX preguntas sobre su vivienda y sus hábitos de consumo.<br/>
+  Pasado un tiempo, con los resultados del proyecto de investigación, E3E le informará sobre el consumo energético de su vivienda con respecto a las demás y sobre posibles medidas para reducirlo.<br/>
+  Los pasos son los siguientes:<br/>
 </p>
 <div class="col3">
   <h2>Paso 1:</h2>
@@ -17,12 +28,12 @@
   <h1>Evolución del consumo</h1>
   <img src="/images/consumo.png" alt="evolución del consumo" />
   <p>
-  En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente. Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
-  De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
+    En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente. Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
+    De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
 </div>
 <div class="col3">
   <h2>Resultados:</h2>
-  <h1>Guía de ahorro</h1>
+  <h1>Informe</h1>
   <img src="/images/empty.png" alt="guía de ahorro"/>
   <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
@@ -30,17 +41,17 @@
 <br style="clear: both;" />
 <h2 >Para qué sirve</h2>
 <p class="about">
-  Conocidos algunos datos de su vivienda y su consumo el sistema e3e puede comparar estos con la climatología y determinar si su vivienda consume poco, normal o mucho en comparación con el parque de viviendas de su zona. Los resultados están basados en el proyecto CEREX del plan nacional.
-  Además, si la información que ha facilitado es fidedigna, conseguira identificar donde están los principales problemas energéticos de su vivienda y cómo puede solucionarlos. Sepa que muchas de las intervenciones destinadas a mejorar el comportamiento energético de su vivienda son objeto de subvenciones estatales gestionadas por las comunidades autónomas.
+  Conocidos algunos datos de su vivienda y su consumo el sistema e3e puede comparar estos con la climatología y determinar si su vivienda consume poco, normal o mucho en comparación con el parque de viviendas de su zona. Los resultados están basados en el proyecto CEREX del plan nacional.<br/>
+  Además, si la información que ha facilitado es fidedigna, conseguira identificar donde están los principales problemas energéticos de su vivienda y cómo puede solucionarlos. Sepa que muchas de las intervenciones destinadas a mejorar el comportamiento energético de su vivienda son objeto de subvenciones estatales gestionadas por las comunidades autónomas.<br/>
 </p>
 <br/>
 <h2>Quiénes somos</h2>
 
 <p class="about">
-  El Instituto Eduardo Torroja de Ciencias de la Construcción es un centro perteneciente al Consejo Superior de Investigaciones Científicas creado en 1947 con la unión del Insituto de la Construcción y la Edificación y el Instituto del Cemento. Desde entonces este centro viene realizando labores de investigación y asistencia científico-técnica en el ámbito de la construcción.
-  Dentro del proyecto wecex se han estudiado las tipologias y las soluciones construcctivas más comunes en el estado, obteniendo de estas un comportamiento tipo de las viviendas. Este análisis es en el que se basa esta web de conocimiento experto para situar la calidad energética de su vivienda dentro de la escala nacional.
+  E3E es una iniciativa del Instituto de Ciencias de la Construcción Eduardo Torroja. CSIC y AICIA.<br/>
+  El Instituto de Ciencias de la Construcción Eduardo Torroja es un centro de investigación del Consejo Superior de Investigaciones Científicas, adscrito al Ministerio de Ciencia e Innovación.<br/>
+  AICIA es un grupo de investigación adscrito a la Escuela de Ingenieros Industriales de la Universidad de Sevilla.<br/>
 </p>
-
 <div id="partners">
   <%= link_to image_tag('partners/ministerio de vivienda.jpg')  %>
   <%= link_to image_tag('partners/torroja.png')  %>
