--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -201,6 +201,7 @@ form a {display: block; float: left; margin: 2em 0 0 9em;}
 form .disabled {-moz-opacity: 0.5;}
 form .disabled span {color: gray;}
 form p input[type=submit] {margin-left: 9em;}
+form p.feedback textarea {width: 80%; height: 10em;}
 
 .errorExplanation {margin-left: 2em; color: @error;}
 .errorExplanation li {list-style-type: none;}
