survey new fields, 3rd person, logos, welcome page

--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -3,9 +3,9 @@
 <p class="about">
   E3E es una iniciativa que pretende obtener datos reales sobre el consumo energético de viviendas de España y los hábitos de consumo de sus habitantes.<br/>
   Mediante una sencilla encuesta E3E proporciona a los usuarios información sobre el consumo energético de una vivienda y la compara con el consumo de las viviendas del mismo tipo y localidad.<br/>
-  E3E es un proyecto de investigación para comparar el consumo de su vivienda con otras similares.<br/>
-  Conocer el consumo de una vivienda ayuda a controlarlo y por tanto a la reducción de las emisiones de CO2.<br/>
-  Conocer el consumo de una vivienda en comparación con las demás ayuda al usuario a saber cómo es su vivienda y si es conveniente su rehabilitación.<br/>
+  E3E es un proyecto de investigación para comparar el consumo de su vivienda con otras similares.<br/><br/>
+  <b>Conocer el consumo de una vivienda ayuda a controlarlo y por tanto a la reducción de las emisiones de CO2.</b>
+  <b>Conocer el consumo de una vivienda en comparación con las demás ayuda al usuario a saber cómo es su vivienda y si es conveniente su rehabilitación.</b><br/>
   E3E contribuye a fijar las escalas para la calificación y certificación energética de edificios existentes.
 </p>
 <br/>
@@ -24,27 +24,24 @@
   </p>
 </div>
 <div class="col3">
-  <h2>Pasos 2 y 3:</h2>
-  <h1>Evolución del consumo</h1>
+  <h2>Paso 2:</h2>
+  <h1>Gas</h1>
   <img src="/images/consumo.png" alt="evolución del consumo" />
   <p>
-    En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente. Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
-    De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
+    En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente.<br/>
+    Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
 </div>
 <div class="col3">
-  <h2>Resultados:</h2>
-  <h1>Informe</h1>
+  <h2>Paso 3:</h2>
+  <h1>Electricidad</h1>
   <img src="/images/empty.png" alt="guía de ahorro"/>
-  <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
+  <p>
+    De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
+  </p>
 </div>
 
 <br style="clear: both;" />
-<h2 >Para qué sirve</h2>
-<p class="about">
-  Conocidos algunos datos de su vivienda y su consumo el sistema e3e puede comparar estos con la climatología y determinar si su vivienda consume poco, normal o mucho en comparación con el parque de viviendas de su zona. Los resultados están basados en el proyecto CEREX del plan nacional.<br/>
-  Además, si la información que ha facilitado es fidedigna, conseguira identificar donde están los principales problemas energéticos de su vivienda y cómo puede solucionarlos. Sepa que muchas de las intervenciones destinadas a mejorar el comportamiento energético de su vivienda son objeto de subvenciones estatales gestionadas por las comunidades autónomas.<br/>
-</p>
-<br/>
+
 <h2>Quiénes somos</h2>
 
 <p class="about">
@@ -54,7 +51,7 @@
 </p>
 <div id="partners">
   <%= link_to image_tag('partners/ministerio de vivienda.jpg')  %>
+  <%= link_to image_tag('partners/csic.gif')  %>
   <%= link_to image_tag('partners/torroja.png')  %>
   <%= link_to image_tag('partners/aicia2.jpg')  %>
-  <%= link_to image_tag('partners/cerda.jpg')  %>
 </div>
