--- a/app/views/surveys/_edit_edificio_vivienda.html.erb
+++ b/app/views/surveys/_edit_edificio_vivienda.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <p class="info"><%=  t(:plantas, :scope => [:encuesta, :edificio]) %></p>
-<p><label>&nbsp;</label><%= f.text_field :vivienda_num_plantas %></p>
+<p><label>&nbsp;</label><%= f.text_field :vivienda_num_plantas, :class => 'numeric' %></p>
 
 <p class="info"><%=  qt(:encuesta, :edificio, :tejado) %></p>
 <% Survey::VIVIENDA_TEJADO.each do |option| %>
@@ -33,20 +33,20 @@
 </div>
 
 <p class="info"><%=  t(:superficie, :scope => [:encuesta, :vivienda]) %></p>
-<p><label>&nbsp;</label><%= f.text_field :vivienda_superficie %><span>m<sup>2</sup></span></p>
+<p><label>&nbsp;</label><%= f.text_field :vivienda_superficie, :class => 'numeric' %><span>m<sup>2</sup></span></p>
 
 <p class="info"><%=  t(:fachada, :scope => [:encuesta, :vivienda]) %></p>
-<p><label>&nbsp;</label><%= text_field_tag :vivienda_fachada %><span>m<sup>2</sup></span></p>
+<p><label>&nbsp;</label><%= f.text_field :vivienda_fachada, :class => 'numeric' %><span>m<sup>2</sup></span></p>
 
 <p class="info"><%=  t(:acristalado, :scope => [:encuesta, :vivienda]) %></p>
-<p><label>&nbsp;</label><%= text_field_tag :vivienda_acristalado %><span>% de la fachada</span></p>
+<p><label>&nbsp;</label><%= f.text_field :vivienda_acristalado, :class => 'numeric' %><span>% de la fachada</span></p>
 
 
 <p class="info"><%=  t(:estancias, :scope => [:encuesta, :vivienda]) %></p>
-<p><label>&nbsp;</label><%= f.text_field :vivienda_estancias %></p>
+<p><label>&nbsp;</label><%= f.text_field :vivienda_estancias, :class => 'numeric' %></p>
 
 <p class="info"><%=  t(:aseos, :scope => [:encuesta, :vivienda]) %></p>
-<p><label>&nbsp;</label><%= f.text_field :vivienda_servicios %></p>
+<p><label>&nbsp;</label><%= f.text_field :vivienda_servicios, :class => 'numeric' %></p>
 
 
 
