--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -1,4 +1,4 @@
-<h1>Qué es E3E</h1>
+<h1 id="e3elogo">Qué es E3E</h1>
 
 <p class="about">
   E3E es una iniciativa que pretende obtener datos reales sobre el consumo energético de viviendas de España y los hábitos de consumo de sus habitantes.<br/>
