--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -11,7 +11,7 @@
 <br/>
 <h2>Cómo colaborar</h2>
 <p class="about">
-  Simplemente rellenando la encuesta que consta de XX preguntas sobre su vivienda y sus hábitos de consumo.<br/>
+  Simplemente rellenando la encuesta que consta de 36 preguntas sobre su vivienda y sus hábitos de consumo.<br/>
   Pasado un tiempo, con los resultados del proyecto de investigación, E3E le informará sobre el consumo energético de su vivienda con respecto a las demás y sobre posibles medidas para reducirlo.<br/>
   Los pasos son los siguientes:<br/>
 </p>
@@ -26,7 +26,7 @@
 <div class="col3">
   <h2>Paso 2:</h2>
   <h1>Gas</h1>
-  <img src="/images/consumo.png" alt="evolución del consumo" />
+  <img src="/images/consumo-gas2.png" alt="evolución del consumo de gas" />
   <p>
     En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente.<br/>
     Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
@@ -34,7 +34,7 @@
 <div class="col3">
   <h2>Paso 3:</h2>
   <h1>Electricidad</h1>
-  <img src="/images/empty.png" alt="guía de ahorro"/>
+  <img src="/images/consumo-electricidad.png" alt="evolución del consumo eléctrico"/>
   <p>
     De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
   </p>
