--- a/app/views/about/feedback.html.erb
+++ b/app/views/about/feedback.html.erb
@@ -2,7 +2,8 @@
 
 <p class="about">
   En este momento E3E está en fase de pruebas por lo que su opinión sobre esta herramienta es muy importante para nosotros.<br/>
-  Por favor, escríbanos informando de cualquier error o sugerencia. Gracias
+  Si se trata de algún problema de la herramienta o un mal funcionamiento agradeceríamos mucho que, además, especificase el nombre y la versión tanto del navegador como del sistema operativo que está usando.<br/>
+  Muchas gracias.
 </p>
 
 <% form_tag(feedback_path) do %>
