--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -45,9 +45,21 @@
 <h2>Quiénes somos</h2>
 
 <p class="about">
-  E3E es una iniciativa del Instituto de Ciencias de la Construcción Eduardo Torroja. CSIC y AICIA.<br/>
-  El Instituto de Ciencias de la Construcción Eduardo Torroja es un centro de investigación del Consejo Superior de Investigaciones Científicas, adscrito al Ministerio de Ciencia e Innovación.<br/>
-  AICIA es un grupo de investigación adscrito a la Escuela de Ingenieros Industriales de la Universidad de Sevilla.<br/>
+  <strong class="e3e">E3E</strong> es una iniciativa del Instituto de Ciencias de la Construcción Eduardo
+  Torroja. CSIC y del Grupo de Termotecnia de la Asociación de Investigación y
+  Cooperación Industrial de Andalucía “Francisco de Paula Rojas” (AICIA).
+</p>
+<p class="about">
+  <strong>El Instituto de Ciencias de la Construcción Eduardo Torroja</strong> es un centro de
+  investigación del Consejo Superior de Investigaciones Científicas, adscrito
+  al Ministerio de Ciencia e Innovación que realiza investigación y asistencia
+  científico-técnica en el ámbito de la construcción.
+</p>
+<p class="about">
+  <strong>AICIA</strong> es un centro tecnológico vinculado a la Escuela Técnica Superior de
+  Ingenieros de la Universidad de Sevilla. El Grupo de Termotecnia realiza
+  trabajos en general sobre el uso racional de la energía, y en especial
+  relacionados con la energética edificatoria.
 </p>
 <div id="partners">
   <%= link_to image_tag('partners/ministerio de vivienda.jpg')  %>
