--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -53,6 +53,7 @@
         <% end %>
         <div class="content">
           <%= yield %>
+          <div id="pagefoot">&nbsp;</div>
         </div>
       </div>
       <div class="push"></div>
