--- a/app/stylesheets/e3e.less
+++ b/app/stylesheets/e3e.less
@@ -249,7 +249,7 @@ table.users td {padding: 0.2em 1em;}
     text-align: center;}
 #pagefoot {background-color: @border; margin: 2em -3em -1em -3em; padding: 0em 4em;
     text-align: center;}
-#partners img {margin: 0 1em; border: 1px solid @gris; padding: 3px; background-color: white;}
+#partners img {margin: 0em 1em 0 1em; border: 1px solid @gris; padding: 3px; background-color: white;}
 
 /** IMAGINERIA */
 
